@@ -4,6 +4,7 @@
 	* Added helper methods for file indexing
 	* Removed unnecessary file path prefixes for hooks where classes can leverage the autoloader
 	* Moved facetting initialization from pi_results to faceting query modifier
+	* Added interface tx_solr_SearchComponent
 
 2012-07-27  Ingo Renner  <ingo.renner@dkd.de>
 
